# locus

./: .dockerignore  .env  .gitignore  .license_template  Cargo.toml  Dockerfile  Makefile.toml  README.txt  build.rs  docker-compose.yaml  rust-toolchain.toml  yarte.toml
.github/workflows/: check.yaml  docker.yaml
content/blogs/programming_languages/: Go.gmi  Rust.gmi
content/blogs/projects/: GemRest.gmi  blog.json
content/json/: contacts.json  interests.json  quotes.json  remarks.json  skills.json
content/meta/: robots.txt
content/pages/: contact.gmi  donate.gmi  gemini.gmi  gopher.gmi  index.gmi  interests.gmi  licensing.gmi  not_found.gmi  skills.gmi
content/pages/blog/programming_languages/: Forth.gmi  Go.gmi  Golang.gmi  OCaml.gmi  Rust.gmi  blog.json
content/pages/blog/projects/: GemRest.gmi
content/static/: donate.gmi  gemini.gmi  index.gmi  licensing.gmi  not_found.gmi  skills.gmi
content/templates/partials/: footer.hbs  header.hbs
src/: constants.rs  macros.rs  main.rs  modules.rs  route.rs  search.rs  xml.rs
src/modules/: api.rs  blog.rs  contact.rs  interests.rs  mod.rs  multi_blog.rs  random.rs  remarks.rs  robots.rs  router.rs  search.rs  sitemap.rs  skills.rs  static.rs  uptime.rs
src/modules/api/: sydney.rs
src/modules/blog/: config.rs  module.rs
templates/: main.hbs
templates/partials/: footer.hbs  header.hbs
