# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "locus"
version = "0.0.0"
authors = ["Fuwn <contact@fuwn.me>"]
edition = "2021"
description = "Fuwn's Gemini Capsule"
readme = "README.txt"
homepage = "https://github.com/gemrest/locus"
repository = "https://github.com/gemrest/locus"
license = "GPL-3.0-only"
keywords = ["gemini"]
categories = ["web-programming"]

# Slower builds, faster executables
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
tokio = { version = "0.2.4", features = ["full"] } # Asynchronous Runtime
pickledb = "0.4.1" # Database
tantivy = "0.17.0" # Full-text Search Engine
windmark = { version = "0.1.16", features = [
  "logger",
  "auto-deduce-mime"
] } # Gemini Server Framework
reqwest = { version = "0.11.10", features = ["blocking"] } # HTTP Client
serde_json = "1.0.79" # JSON Serialization
log = "0.4.16" # Logging Macros
pretty_env_logger = "0.4.0" # Pretty Log Printing
rand = "0.8.5" # Random Number Generation
serde = "1.0.136" # Serialization
yarte = "0.15.6" # Templating Engine
tempfile = "3.3.0" # Temporary File Creation and Access

[build-dependencies]
vergen = "7.0.0" # Compile-time Environment Variables
yarte = "0.15.6" # Templating Engine
anyhow = "1.0.56" # `Result`
